FIxed align

--- a/assets/css/main-rtl.css
+++ b/assets/css/main-rtl.css
@@ -1340,12 +1340,13 @@ button.suki-toggle:hover, button.suki-toggle:focus {
 }
 
 .alignleft {
-	float: right;
+	float: left;
+	text-align: left;
 	margin: 0 0 0 1.25em;
 }
 
 .alignright {
-	float: left;
+	float: right;
 	margin: 0 1.25em 0 0;
 }
 
@@ -1353,6 +1354,8 @@ button.suki-toggle:hover, button.suki-toggle:focus {
 	display: block;
 	clear: both;
 	margin: 0 auto;
+	float: none;
+	text-align: center;
 }
 
 .wp-caption {
