--- a/assets/css/main.css
+++ b/assets/css/main.css
@@ -1340,11 +1340,15 @@ button.suki-toggle:hover, button.suki-toggle:focus {
 }
 
 .alignleft {
+	/*rtl:ignore*/
 	float: left;
+	/*rtl:ignore*/
+	text-align: left;
 	margin: 0 1.25em 0 0;
 }
 
 .alignright {
+	/*rtl:ignore*/
 	float: right;
 	margin: 0 0 0 1.25em;
 }
@@ -1353,6 +1357,8 @@ button.suki-toggle:hover, button.suki-toggle:focus {
 	display: block;
 	clear: both;
 	margin: 0 auto;
+	float: none;
+	text-align: center;
 }
 
 .wp-caption {
